# Complete-Striped-Smith-Waterman-Library

./: .gitmodules  .travis.yml  Benchmark.cpp  Benchmark.h  CMakeLists.txt  README  README.md  README_ssw_v0.1.4  main.c  main.cpp  setup.py  ssw.cpp  ssw.h
demo/: 100k.fa  10k.fa  1M.fa  54mer_hap1_1.100.fa  54mer_hap1_1.100.fastq  blosum62.txt  old.txt  pRead.fa  pRef.fa  protein1.fa  protein2.fa  query.fa  query.fastq  query1.fa  query2.fa  r1.fa  r1_query.fq  target.fa  target.fastq  target1.fa  target2.fa
src/: .gitignore  Makefile  __init__.py  a.out  banded_sw.c  banded_sw.h  example.c  example.cpp  kseq.h  main.c  pyssw.py  sse2neon.h  ssw.c  ssw.h  ssw_cpp.cpp  ssw_cpp.h  ssw_lib.py  ssw_test  ssw_wrap.py  ssw_wrapper.py  vec128int.h.old
src/example_c.dSYM/Contents/: Info.plist
src/example_cpp.dSYM/Contents/: Info.plist
src/java/: Makefile  sswjni.c
src/java/ssw/: Aligner.java  Alignment.java  Example.java
src/libssw.so.dSYM/Contents/: Info.plist
src/ssw_test.dSYM/Contents/: Info.plist
src/ssw_test.dSYM/Contents/Resources/DWARF/: ssw_test
